crates/laplace-macro/tests/ui/fail/verify_threads_nine.rs
// SPDX-License-Identifier: Apache-2.0

#[laplace_macro::laplace_verify(threads = 9)]
async fn threads_nine() {}

fn main() {}
